Made few Changes

--- a/hobbies.html
+++ b/hobbies.html
@@ -7,11 +7,12 @@
     <title>Hobbies</title>
   </head>
   <body>
-    <center>
       <h1>Hobbies</h1>
       <hr size="3" noshade="1">
-      <p title="Manojit Chakma blogs"> <strong>MC Vlogs</strong> </p>
+      <p title="Manojit Chakma Star"> <strong>MC Stars</strong> </p>
       <ol type="i" start="2">
+        <li>Coding</li>
+        <li>Learning New Technologies</li>
         <li>
           <a href="https://www.youtube.com/watch?v=Qmi-Xwq-MEc">Travelling</a>
         </li>
@@ -22,6 +23,5 @@
           <a href="https://www.youtube.com/watch?v=mf-UJ32PJgU">Singing</a>
         </li>
       </ol>
-    </center>
   </body>
 </html>
