--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </ul>
 <hr size="3" noshade="3">
   <h3>Work Experience</h3>
-  <p> 2019-2020 Associate Developer at University of Kelaniya</p>
+  <p> 2019-2020 Flutter Designer at University of Kelaniya</p>
   <p> 2018-2019 Researcher at Department of Statistic and Computer Science</p>
   <table>
     <thead>
@@ -70,7 +70,7 @@
     </tbody>
     <tr>
       <td>2019-2020</td>
-      <td>Associate Developer at University of Kelaniya</td>
+      <td>Flutter Designer at University of Kelaniya</td>
     </tr>
     <tr>
       <td>2020</td>
